EXTRA_DIST = amd128.sbs amd128.dat amd128.lst amd173.sbs amd173.dat amd173.lst \
amd249.sbs amd249.dat amd249.lst amd265.sbs amd265.dat amd265.lst \
amd285.sbs amd285.dat amd285.lst amd290.sbs amd290.dat amd290.lst \
amd297.sbs amd297.dat amd297.lst cda171.c cda171.dat cda171.lst \
cda233.sbs cda233.dat cda233.lst cda50.sbs cda50.dat cda50.lst \
cda88.sbs cda88.dat cda88.lst cda88.ps custom.c custom.dat custom.lst custom.ps \
ed122.sbs ed122.dat ed122.lst lm50.sbs lm50.dat lm50.lst \
ms95.sbs ms95.dat ms95.lst ms95.ps cda262.c cda262.dat cda262.lst \
standard.c standard.dat standard.lst standard.ps ed176.sbs ed176.dat ed176.lst

noinst_EXTRA_DIST = amd128.sbs amd128.dat amd128.lst amd173.sbs amd173.dat amd173.lst \
amd249.sbs amd249.dat amd249.lst amd265.sbs amd265.dat amd265.lst \
amd285.sbs amd285.dat amd285.lst amd290.sbs amd290.dat amd290.lst \
amd297.sbs amd297.dat amd297.lst cda171.c cda171.dat cda171.lst \
cda233.sbs cda233.dat cda233.lst cda50.sbs cda50.dat cda50.lst \
cda88.sbs cda88.dat cda88.lst cda88.ps custom.c custom.dat custom.lst custom.ps \
ed122.sbs ed122.dat ed122.lst lm50.sbs lm50.dat lm50.lst \
ms95.sbs ms95.dat ms95.lst ms95.ps cda262.c cda262.dat cda262.lst \
standard.c standard.dat standard.lst standard.ps ed176.sbs ed176.dat ed176.lst
