bin_PROGRAMS = dap dappp
dappp_SOURCES = dappp.c sastrans.c sastrans1.c sastrans2.c sastrans3.c

include_HEADERS = dap.h dap1.h ps.h

lib_LIBRARIES = libdap.a
libdap_a_SOURCES = dap0.c machdep.c dap1.c dap2.c dap3.c dap4.c dap5.c dap6.c prob.c misc.c ps.c ps1.c
noinst_HEADERS = dap_make.h externs.h ps.h sas.h
