bin_PROGRAMS = dap dappp
dappp_SOURCES = dappp.cpp sastrans.cpp sastrans1.cpp sastrans2.cpp sastrans3.cpp
dap_SOURCES = dap.cpp

include_HEADERS = dap.h dap1.h ps.h

lib_LIBRARIES = libdap.a
libdap_a_SOURCES = dap0.cpp machdep.cpp dap1.cpp dap2.cpp dap3.cpp dap4.cpp dap5.cpp dap6.cpp prob.cpp misc.cpp ps.cpp ps1.cpp
noinst_HEADERS = dap_make.h externs.h ps.h sas.h typecompare.h
